--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,4 +9,4 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 mybatis:
-  mapper-locations: classpath:mapper/generated/*.xml
+  mapper-locations: classpath:mapper/**/*.xml
