--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
         <version>2.3.1.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.agreatprj</groupId>
-    <artifactId>agreatprj</artifactId>
+    <groupId>com.backend</groupId>
+    <artifactId>backend</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>agreatprj</name>
+    <name>backend</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -55,6 +55,10 @@
                     <artifactId>junit-vintage-engine</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
     </dependencies>
 
