--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <properties>
         <java.version>1.8</java.version>
         <spring.boot.version>2.3.1.RELEASE</spring.boot.version>
+        <org.springframework.boot-version>2.1.3.RELEASE</org.springframework.boot-version>
     </properties>
 
     <dependencyManagement>
@@ -45,6 +46,11 @@
                 <groupId>com.backend</groupId>
                 <artifactId>yuepaijie-component-service</artifactId>
                 <version>0.0.1-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-security</artifactId>
+                <version>${org.springframework.boot-version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
