--- a/yuepaijie-component-web/pom.xml
+++ b/yuepaijie-component-web/pom.xml
@@ -37,6 +37,10 @@
             <groupId>com.backend</groupId>
             <artifactId>yuepaijie-component-service</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
