--- a/yuepaijie-component-service/pom.xml
+++ b/yuepaijie-component-service/pom.xml
@@ -14,8 +14,20 @@
     <name>yuepaijie-component-service</name>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>8</source>
+          <target>8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
-    <properties>
+  <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
