--- a/yuepaijie-component-web/src/main/resources/application.yml
+++ b/yuepaijie-component-web/src/main/resources/application.yml
@@ -20,13 +20,13 @@ redis:
   port: 6379
   password: LvLeEG9bI4aUwfOZ
   pool:
-    max-idle: 20
-    max-total: 100
-    max-wait: 3000
+    max-idle: 200
+    max-total: 1000
+    max-wait: 30000
   test-on-borrow: true
   use-sentinel: false
-  database: 16
-  timeout: 3000
-esop:
+  database: 8
+  timeout: 20000
+yuepaijie:
   auth:
     timeoutMinute: 90
