--- a/yuepaijie-component-web/src/main/resources/application.yml
+++ b/yuepaijie-component-web/src/main/resources/application.yml
@@ -8,6 +8,8 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
 mybatis:
   mapper-locations: classpath:mapper/**/*.xml
+  configuration:
+    map-underscore-to-camel-case: true
 redis:
   host: 127.0.0.1
   port: 6379
