--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,15 @@
                 <artifactId>poi-ooxml</artifactId>
                 <version>3.15</version>
             </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>javax.validation</groupId>
+                <artifactId>validation-api</artifactId>
+                <version>1.1.0.Final</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
