--- a/yuepaijie-component-common/pom.xml
+++ b/yuepaijie-component-common/pom.xml
@@ -50,6 +50,14 @@
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
         </dependency>
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>javax.validation</groupId>
+          <artifactId>validation-api</artifactId>
+      </dependency>
     </dependencies>
 
     <build>
