--- a/yuepaijie-component-service/pom.xml
+++ b/yuepaijie-component-service/pom.xml
@@ -48,6 +48,14 @@
         <groupId>org.springframework.security</groupId>
         <artifactId>spring-security-web</artifactId>
       </dependency>
+      <dependency>
+        <groupId>redis.clients</groupId>
+        <artifactId>jedis</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>commons-lang</groupId>
+        <artifactId>commons-lang</artifactId>
+      </dependency>
     </dependencies>
 
 </project>
