--- a/pom.xml
+++ b/pom.xml
@@ -74,11 +74,6 @@
             </dependency>
             <dependency>
                 <groupId>com.google.zxing</groupId>
-                <artifactId>core</artifactId>
-                <version>3.1.0</version>
-            </dependency>
-            <dependency>
-                <groupId>com.google.zxing</groupId>
                 <artifactId>javase</artifactId>
                 <version>3.1.0</version>
             </dependency>
@@ -96,6 +91,7 @@
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
+                <version>27.0.1-jre</version>
             </dependency>
             <dependency>
                 <groupId>javax.validation</groupId>
