--- a/yuepaijie-component-web/src/main/resources/application.yml
+++ b/yuepaijie-component-web/src/main/resources/application.yml
@@ -2,9 +2,9 @@ server:
   port: 8081
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/yuepaijie?useSSL=false
-    username: root
-    password: root
+    url: jdbc:mysql://rm-j6ctc8jia9jtw2b6q2o.mysql.rds.aliyuncs.com:3306/yuepaijie?useSSL=false
+    username: hw_root
+    password: HW!root01X
     driver-class-name: com.mysql.cj.jdbc.Driver
 mybatis:
   mapper-locations: classpath:mapper/**/*.xml
