--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
         <module>yuepaijie-component-web</module>
         <module>yuepaijie-component-service</module>
         <module>yuepaijie-component-common</module>
+        <module>yuepaijie-component-file</module>
     </modules>
 
     <groupId>com.backend</groupId>
@@ -97,6 +98,11 @@
                 <groupId>javax.validation</groupId>
                 <artifactId>validation-api</artifactId>
                 <version>1.1.0.Final</version>
+            </dependency>
+            <dependency>
+                <groupId>com.aliyun.oss</groupId>
+                <artifactId>aliyun-sdk-oss</artifactId>
+                <version>3.10.2</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
