--- a/yuepaijie-component-common/pom.xml
+++ b/yuepaijie-component-common/pom.xml
@@ -58,6 +58,10 @@
           <groupId>javax.validation</groupId>
           <artifactId>validation-api</artifactId>
       </dependency>
+      <dependency>
+        <groupId>com.aliyun.oss</groupId>
+        <artifactId>aliyun-sdk-oss</artifactId>
+      </dependency>
     </dependencies>
 
     <build>
