--- a/yuepaijie-component-common/src/main/resources/application-common.yml
+++ b/yuepaijie-component-common/src/main/resources/application-common.yml
@@ -1,3 +1,8 @@
+spring:
+  servlet:
+    multipart:
+      max-file-size: 100MB #单个文件最大
+      max-request-size: 100MB #一次请求最大
 yuepaijie:
   auth:
     timeoutMinute: 90
