--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
                 <artifactId>aliyun-sdk-oss</artifactId>
                 <version>3.10.2</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.1</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
