--- a/yuepaijie-component-common/pom.xml
+++ b/yuepaijie-component-common/pom.xml
@@ -62,6 +62,10 @@
         <groupId>com.aliyun.oss</groupId>
         <artifactId>aliyun-sdk-oss</artifactId>
       </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+      </dependency>
     </dependencies>
 
     <build>
